# bexio-cli

./: README.de.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bexio/: __init__.py  auth.py  cli.py  client.py  mcp_server.py  output.py
bexio/commands/: accounts.py  bills.py  contacts.py  countries.py  currencies.py  invoices.py  items.py  lookup.py  orders.py  payment_types.py  payments.py  projects.py  quotes.py  reminders.py  taxes.py  timesheets.py  units.py
bexio/models/: __init__.py  _common.py  invoice.py  order.py  position.py
docs/: DEVELOPMENT.md
scripts/: install_mcp.py
tests/: helpers.py  test_accounting.py  test_accounts.py  test_auth.py  test_bills.py  test_client.py  test_contacts.py  test_countries.py  test_currencies.py  test_invoices.py  test_items.py  test_lookup.py  test_models.py  test_orders.py  test_payment_types.py  test_payments.py  test_projects.py  test_quotes.py  test_reminders.py  test_taxes.py  test_timesheets.py  test_units.py
